# MalliavinRegression

./: .flake8  .gitignore  CITATION.cff  MalliavinDescent.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: MalliavinDescent-checkpoint.ipynb  MalliavinDescent_backup-checkpoint.ipynb  README-checkpoint.md
examples/: demo.py
src/malliavin_regression/: __init__.py  core.py
tests/: test_core.py
