[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malliavin-regression"
version = "0.1.0"
description = "Code from MalliavinDescent notebook packaged as a library"
authors = [{ name = "El Mehdi Haress" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "tqdm",
  "scikit-learn",
]


[project.optional-dependencies]
test = ["pytest", "pytest-cov", "flake8"]
examples = ["tqdm", "seaborn"]


[tool.setuptools.packages.find]
where = ["src"]
